# sed

./: Cargo.toml  README.md
src/: global_data.rs  main.rs
src/wman/: mod.rs  tChar.rs  winManager.rs  window.rs
src/wman/windowImpl/: helloWorld.rs  mod.rs
