[package]
name = "sed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
lazy_static = "1.4.0"
terminal_size = "0.2.6"
uuid = {version="1.3.2", features=["v4", "macro-diagnostics"]}
